--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Rock Salt', cursive;
             text-align: center;
-            background: url('heart.jpg') no-repeat center center fixed; /* Update the path here */
+            background: url(https://pin.it/lgrZwu7cn) no-repeat center center fixed; /* Update the path here */
             background-size: cover;
             color: white;
             overflow: hidden;
