--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             font-size: 3rem;
             padding: 20px;
             margin-top: 50px;
-            color: #ff4e50;
+            color: #a37676;
         }
 
         button {
