--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 </head>
 <body>
     <!-- Embed audio here -->
-    <audio autoplay loop>
-        <source src="III.Urn.mp3" type="audio/mpeg">
+    <audio controls autoplay>
+        <source src="III.Urn.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
