--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
             #button-container {
                 gap: 10px;
-                justify-content: space-evenly;
+                justify-content: center;
                 flex-direction: column;
             }
         }
