--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <button id="yes-btn" onclick="checkAnswer(true)" style="display: none;">Yes 💕</button>
         <button id="no-btn" onclick="checkAnswer(false)" style="display: none;">No 💔</button>
     </div>
-    <p id="love-message">I love you always. ❤️💖🥰</p>
+    <p id="love-message">I love you always. 👩‍❤️‍💋‍👨</p>
     
     <script>
         function startQuiz() {
