--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             #button-container {
                 gap: 10px;
                 justify-content: center;
-                flex-direction: row;
+                flex-direction: column ;
             }
         }
     </style>
