--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </head>
 <body>
     <!-- Embed audio here -->
-    <audio autoplay>
+    <audio control autoplay>
         <source src="Valentina.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
