--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </head>
 <body>
     <!-- Embed audio here -->
-    <audio control autoplay>
+    <audio autoplay loop controls>
         <source src="Valentina.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
